# Defensive-Cognitive-Runtime

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  HUMAN_EXPLANATION.txt  MANUAL.md  README.md  THREAT_MODEL.md  pyproject.toml  requirements.txt
config/: default_config.yaml  default_policy.yaml
fixtures/: benign_scenario.json  dangerous_scenario.json  suspicious_scenario.json
protector_stack/: __init__.py  main.py
protector_stack/constitution/: __init__.py  doctrine.py  doctrine_checksum.json  integrity.py
protector_stack/containment/: __init__.py  circuit_breaker.py  permissions.py  quarantine.py  rollback.py
protector_stack/governance/: __init__.py  explainer.py  review.py
protector_stack/interface/: __init__.py  cli.py  reports.py
protector_stack/memory/: __init__.py  audit.py  incidents.py  provenance.py
protector_stack/observation/: __init__.py  collector.py  file_watcher.py  normalizer.py  process_monitor.py  schemas.py
protector_stack/policy/: __init__.py  engine.py  rules.py  schemas.py  workflows.py
protector_stack/simulation/: __init__.py  planner.py  safety_gate.py
protector_stack/threat/: __init__.py  analyzer.py  drift_detector.py  escalation_detector.py  exfil_detector.py  injection_detector.py  scorer.py
protector_stack/utils/: __init__.py  config.py  crypto.py  logging.py
tests/: __init__.py  test_constitution.py  test_containment.py  test_crypto.py  test_integration.py  test_memory.py  test_observation.py  test_policy.py  test_simulation.py  test_threat.py
